ecom product gallery - fix stretched images

--- a/less/plugins/ecommerce/product-gallery.less
+++ b/less/plugins/ecommerce/product-gallery.less
@@ -128,7 +128,7 @@
         -moz-transition: opacity 0.5s ease;
         -o-transition: opacity 0.5s ease;
         transition: opacity 0.5s ease;
-        
+
 
         @media @bp-global-small {
             width: 70%;
@@ -137,6 +137,7 @@
 
         .image {
             min-height: 20px; // fix for IE
+            object-fit: contain;
         }
 
 
